--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -56,7 +56,7 @@
     }
 </style>
 
-<div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 0  auto">
+<div class="uk-card uk-card-default uk-card-body uk-width-1" style="margin: 0  auto">
     <container class="container uk-flex uk-flex-around uk-flex-top uk-width-1">
         <div class="uk-width-1-2 uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
@@ -93,24 +93,11 @@
         </div>
         <div class="uk-flex uk-flex-column uk-width-1-2 uk-text-center" style="padding-left: 5%">
             <div>
-                <h2 class="uk-text-truncate uk-width-1-2">{{product.product_name}}</h2>
+                <h2 class="uk-text-truncate uk-width-2-3" style="font-size: 3em;">{{product.product_name}}</h2>
             </div>
-            <!--  -->
-            <!-- <div class="uk-flex">
-                <div class="uk-width-auto uk-display-inline uk-margin-small-right">
-                    <img src="{{shop.logoImage}}" class="uk-border-circle" style="width: 60px; height: 60px">
-                </div>
-                <div class="uk-width-expand uk-display-inline">
-                    <h3 class="uk-card-title uk-margin-remove-bottom ">{{shop.name}}
-                    </h3>
-                    <div><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
-                    </div>
-                </div>
-            </div> -->
-            <!--  -->
-            <div class="uk-card uk-card-default uk-width-3-5@m uk-text-center uk-margin-small-bottom"
+            <!-- <div class="uk-card uk-card-default uk-width-3-5@m uk-text-center uk-margin-small-bottom"
                 style="padding: 2% 0">
-                <p class="uk-margin-left uk-width-2-3@m" style="margin: 0;"> <i class="fa-regular fa-shield-check"></i>
+                <p class="uk-margin-left uk-width-2-3@m" style="margin: 0;"> <i class="fa-sharp fa-solid fa-badge-check"></i>
                     Провернный продавец</p>
             </div>
 
@@ -118,18 +105,18 @@
                 style="padding: 2% 0">
                 <p class="uk-margin-left uk-width-2-3@m" style="margin: 0;"> <i class="fa-regular fa-shield-check"></i>
                     Доставка от поставщика</p>
-            </div>
+            </div> -->
 
-            <h1 id="price" class="uk-width-1 uk-text-left">{{product.show_price}} руб.</h1>
+            <h1 id="price" class="uk-width-1 uk-text-left" style="font-size: 3em;">{{product.show_price}} руб.</h1>
             <!--  -->
             <div class="uk-text-left">
                 {% if request.user.is_authenticated %}
-                <button class="uk-button uk-button-secondary uk-width-2-3 uk-text-bold uk-margin-small-bottom"
-                    href="#modal-overflow" style="background-color: #B54F00;" uk-toggle>Заказать</button>
+                <button class="uk-button uk-button-secondary uk-width-2-3 uk-margin-small-bottom" href="#modal-overflow"
+                    style="background-color: #B54F00; font-size: 2em; padding: 1%" uk-toggle>Заказать</button>
 
                 {% else %}
-                <a class="uk-button uk-button-secondary uk-width-2-3 uk-text-bold uk-margin-small-bottom"
-                    href="/login">Заказать</a>
+                <a class="uk-button uk-button-secondary uk-width-2-3 uk-margin-small-bottom"
+                    style="background-color: #B54F00; font-size: 2em; padding: 1%" href="/login">Заказать</a>
                 {% endif %}
                 <div id="modal-overflow" uk-modal>
                     <div class="uk-modal-dialog">
@@ -138,52 +125,50 @@
                         </div>
                         <div class="uk-modal-header">
                             <div style="margin-top: 2%">
-                                <h3 style="text-align: center;">Заказать товар</h3>
+                                <h3 style="text-align: center; font-size: 2em;">Заказать товар</h3>
                             </div>
                         </div>
                         <form method="POST" action="">
                             <div class="uk-modal-body uk-margin-left uk-margin-right uk-margin-bottom" uk-overflow-auto
                                 style="padding: 0">
                                 <img>
-                                <h4 class="uk-margin-remove-top">Название товара</h4>
+                                <h4 class="uk-margin-remove-top" style="font-size: 2em">Название товара:</h4>
+                                <p class="uk-text-truncate" style="font-size: 2em">{{product.product_name}}</p>
                                 <div class="uk-flex">
-                                    <p class="uk-margin-small-top">Оплата: </p>
-                                    <p class="uk-margin-left uk-margin-small-top"> картой онлайн</p>
+                                    <p style="font-size: 2em" class="uk-margin-small-top">Оплата: </p>
+                                    <p style="font-size: 2em" class="uk-margin-left uk-margin-small-top"> картой онлайн
+                                    </p>
                                 </div>
                                 <div class="uk-flex">
-                                    <p class="uk-margin-small-top">Количество: </p>
+                                    <p style="font-size: 2em" class="uk-margin-small-top">Количество: </p>
                                     <div
                                         class="uk-flex uk-uk-flex-center uk-flex-middle uk-width-expand uk-margin-medium-left">
                                         <a class="uk-button uk-button-link amount-changer" id="minusBtn"
-                                            uk-icon="icon: minus"></a>
-                                        <input type="number" name="amount" min="1" max="1000" id="amount" value="1" style="margin:0 2%"
-                                            class="uk-input uk-width-1-5">
+                                            uk-icon="icon: minus; ratio: 2"></a>
+                                        <input type="number" name="amount" min="1" max="1000" id="amount" value="1"
+                                            style="margin:0 2%; font-size: 2em" class="uk-input uk-width-2-5">
                                         <a class="uk-button uk-button-link amount-changer" id="plusBtn"
-                                            uk-icon="icon: plus"></a>
+                                            uk-icon="icon: plus; ratio: 2"></a>
                                         <!-- <button type="button" class="uk-width-auto uk-heading-xsmall uk-button uk-button-primary" style="padding: 0 20%"><span uk-icon="icon: minus; ratio: 4"></span></button> -->
                                         <!-- <button type="button" class="uk-width-auto uk-heading-xsmall uk-button uk-button-primary" style="padding: 0 20%"><span uk-icon="icon: plus; ratio: 4"></span></button> -->
                                     </div>
                                 </div>
                                 <div class="uk-flex">
-                                    <p class="uk-margin-small-top">Адрес доставки:</p>
-                                    <div class="uk-margin-left" style="width: 65%">
-                                        <input class="uk-input" name="address" id="form-stacked-text" type="text"
-                                            placeholder="г.Москва, Ленинградский проезд 111, кв 101, 100102">
-                                        <p class="uk-text-meta uk-margin-remove" style="font-size: 12px">Вводите адрес в
-                                            формате: "г. Город, улица, кв, почтовый индекc"</p>
-                                    </div>
+                                    <p style="font-size: 1.6em" class="uk-margin-small-top">Адрес доставки:</p>
+                                    <input style="font-size: 2em" class="uk-input" name="address" id="form-stacked-text"
+                                        type="text" placeholder="г.Москва, Ленинградский проезд 111, кв 101, 100102">
                                 </div>
-                                <p for="textarea">Пожелания к товару:</p>
+                                <p for="textarea" style="font-size: 2em">Пожелания к товару:</p>
                                 <textarea class="uk-textarea" name="message" id="" rows="5 "
-                                    style="width: 100%;"></textarea>
+                                    style="width: 100%; font-size: 2em;"></textarea>
                             </div>
 
                             <div class="uk-modal-footer uk-text-right">
                                 <button class="uk-button uk-button-default uk-modal-close"
-                                    type="button">Закрыть</button>
+                                    type="button" style="font-size: 2em; padding: 2%;">Закрыть</button>
 
                                 {% csrf_token %}
-                                <button class="uk-button uk-button-primary" style="background-color: #B54F00;"
+                                <button class="uk-button uk-button-primary" style="background-color: #B54F00; font-size: 2em; padding: 2%"
                                     name="buy_product" type="submit"
                                     onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Заказать
                                     товар</button>
@@ -194,10 +179,10 @@
                 </div>
             </div>
             <div class="uk-margin-medium-top uk-width-1">
-                <h3 class="uk-width-1 uk-text-left">Размеры:</h3>
+                <h3 class="uk-width-1 uk-text-left" style="font-size: 2em">Размеры:</h3>
                 <div class="uk-grid uk-grid-small uk-grid-match uk-width-4-5" id="sizelist" uk-grid>
                     {% for size in product.sizes %}
-                    <button class="uk-button uk-button-link size">{{size}}</button>
+                    <button class="uk-button uk-button-link size" style="font-size: 2em">{{size}}</button>
                     {% endfor %}
                 </div>
 
@@ -209,18 +194,18 @@
     <br>
     <container>
         <div class="uk-flex uk-flex-top uk-width-1">
-            <h2 class="uk-width-1-2 uk-text-center">Информация</h2>
-            <div class="uk-width-1-2" style="padding: 5px 10%;">
+            <h2 class="uk-width-1-3 uk-text-center" style="font-size: 3em">Информация</h2>
+            <div class="uk-width-2-3" style="padding: 5px 10%;">
                 <ul class="uk-nav-default" uk-nav>
                     <li class="uk-parent">
                         <a href="# " class="uk-text-muted uk-flex uk-flex-middle uk-flex-between"
                             style="border-bottom: 1px solid">
-                            <h2 class="uk-text-muted uk-margin-small-bottom">Описание</h2>
-                            <span uk-icon="icon: menu"></span>
+                            <h2 class="uk-text-muted uk-margin-small-bottom" style="font-size: 4em">Описание</h2>
+                            <span uk-icon="icon: menu; ratio: 2"></span>
                         </a>
                         <ul class="uk-nav-sub uk-width-1">
                             <li class="uk-width-1">
-                                <p class="uk-text-break">{{product.description}}</p>
+                                <p class="uk-text-break" style="font-size: 2em">{{product.description}}</p>
                             </li>
                         </ul>
                     </li>
@@ -228,12 +213,12 @@
                     <li class="uk-parent">
                         <a class="uk-text-muted uk-flex uk-flex-middle uk-flex-between"
                             style="border-bottom: 1px solid">
-                            <h2 class="uk-text-muted uk-margin-small-bottom">Харрактиристики</h2>
-                            <span uk-icon="icon: menu"></span>
+                            <h2 class="uk-text-muted uk-margin-small-bottom" style="font-size: 3.5em">Харрактиристики</h2>
+                            <span uk-icon="icon: menu; ratio: 2"></span>
                         </a>
                         <ul class="uk-nav-sub uk-width-1">
                             <li class="uk-width-1">
-                                <p class="uk-text-break">На данны момент пусто</p>
+                                <p class="uk-text-break" style="font-size: 3em">На данны момент пусто</p>
                             </li>
                         </ul>
                     </li>
@@ -422,19 +407,19 @@
 
     $('.amount-changer').on('click', function () {
         number = parseInt($('#amount').val())
-        if (this.id == "plusBtn" && number >= 1 ){
+        if (this.id == "plusBtn" && number >= 1) {
             $('#amount').val(number + 1)
-        } else if (number <= 1){
+        } else if (number <= 1) {
             $('#amount').val(1)
-        } else{
+        } else {
             $('#amount').val(number - 1)
         }
     });
     $('#amount').on('input', function () {
-        if (parseInt($('#amount').val()) <= 1){
+        if (parseInt($('#amount').val()) <= 1) {
             $('#amount').val(1)
         }
-        if (parseInt($('#amount').val()) >= 1000){
+        if (parseInt($('#amount').val()) >= 1000) {
             $('#amount').val(1000)
         }
     });
