--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -116,8 +116,9 @@
                         <a href="/becomeCreator/" uk-icon="icon: database"></a>
                     </li>
                     {% endif %}
+                
                     <li class="uk-active">
-                        <a href="/orders/" uk-icon="icon: cart"></a>
+                        <a href="/orders/" uk-icon="icon: bag"></a>
                     </li>
                     <li class="uk-active">
                         <a uk-icon="icon: user" href="/login/"></a>
@@ -158,7 +159,7 @@
 
 <style>
     * {
-        font-family: 'Montserrat' !important;
+        font-family: 'Montserrat', !important;
     }
 
     svg {
