--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -1,8 +1,51 @@
 {% extends "base.html" %}
+
 {% block content %}
+<style>
+     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+     p {
+        margin: 0 0 2% 0 ; 
+     }
+</style>
 
 <body>
-    <div class="uk-flex uk-flex-between uk-flex-middle uk-width-4-5" style="margin: 0 auto">
+    <div class="uk-width-1 uk-flex-column uk-margin-small-top uk-margin-bottom" style="width:80%; margin: auto">
+        <div class="uk-margin-medium-bottom">
+            <p style="font-weight: 600; font-size: 2.625em;">Мои заказы</p>
+            <hr class="uk-divider-icon uk-margin-top">
+        </div>
+
+        <div class="uk-flex">
+            <div  class="uk-width-2-3 uk-margin-medium-right" style="background-color: grey; height: 70vh">
+                
+            </div>
+
+            <div class="uk-flex-column uk-width-1-3">
+                <div class="uk-flex-column uk-margin-medium-bottom">
+                    <p style="font-weight: 600; font-size: 2em;">Помощь</p>
+                    <p style="font-weight: 600; font-size: 1em;">Как отслеживать доставку заказа?</p>
+                    <p style="font-weight: 600; font-size: 1em;">Как изменить дату или место доставки курьером?</p>
+                    <p style="font-weight: 600; font-size: 1em;">Как вернуть товар?</p>
+                    <hr class="uk-divider-icon uk-margin-top ">
+                </div>
+                <div class="uk-flex-column" style="width: 80%">
+                    <p style="font-weight: 600; font-size: 1.2em;">Не нашли ответа? Напишите нам</p>
+                    <div style="width: 70%; margin: auto;">
+                        <a class="uk-button uk-button-secondary uk-border-pill">Задать вопрос</a>
+                    </div>           
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+{% endblock %}
+  
+  
+  
+  
+  
+  
+  <!-- <div class="uk-flex uk-flex-between uk-flex-middle uk-width-4-5" style="margin: 0 auto">
         <h1>Корзина</h1>
         <h3 class="uk-text-center uk-width-2-3">Здесь вы можете отследить статус текущих заказов</h3>
     </div>
@@ -34,10 +77,10 @@
                         <div class="uk-flex" style="margin-top: 5%">
                             {% csrf_token %}
                             <button class="uk-button uk-button-danger uk-border-rounded uk-width-1" style="margin: 0 1%"
-                                name="decline" value="{{product.id}}" type="submit">Отказаться</button>
+                                name="decline" value="{{product.id}}" type="submit">Отказаться</button> -->
                             <!-- <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}" -->
                             <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
             </div>
@@ -72,7 +115,7 @@
             </div>
         </div>
     </div>
-</body>
+</body> -->
 
 <script>
     const chatBtn = document.getElementById('cahtBtn')
@@ -137,5 +180,3 @@
     }
 </style>
 
-
-{% endblock %}
